# gazelle-sass-demo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
hello_world/: BUILD  BUILD.bazel  main.scss
shared/: BUILD  BUILD.bazel  _colors.scss  _fonts.scss
tools/bazel/: autogazelle.bash
